--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,32 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+EDS Dashboard
 
-Things you may want to cover:
-
-* Ruby version
+* Ruby version: 2.1, Rails Version 4.1
 
 * System dependencies
 
 * Configuration
+	install dependencies:
+		bundle install
 
 * Database creation
 
+	create a dump.sql file from Jacob's localhost
+
 * Database initialization
 
+	store password in env variables
+
 * How to run the test suite
+
+	1) copy to db/seed.rb parts of the development database
+
+		rake db:seed:dump MODELS="BannerTerm, ExitCode, PraxisTest, Program"
+
+	2) seed the test database:
+		rake db:seed RAILS_ENV=test
+
 
 * Services (job queues, cache servers, search engines, etc.)
 
