--- a/README.rdoc
+++ b/README.rdoc
@@ -16,13 +16,14 @@ EDS Dashboard
 
 * Database initialization
 
+	Create development database using the included mwb file.
 	store password in env variables
 
 * How to run the test suite
 
 	to create the test database:
-		create the test database -> rake db:test:prepare
-		populate the database with seed data -> rake RAILS_ENV=test db:seed 
+		To ensure test fixtures are up to date:
+			rake db: fixtures:dump_yaml	-> this will pull data from development db and create fixtures for unit tests
 
 * Services (job queues, cache servers, search engines, etc.)
 
