added note about disidentifying data on production server

--- a/README.rdoc
+++ b/README.rdoc
@@ -23,6 +23,9 @@ EDS Dashboard
 		4) create a dump.sql file by running mysqlsump -u root -p eds_development > dump.sql
 		5) import schema and all data by copy/pasting this file in phpmyadmin 
 
+	Disidentified data in development db on production server:
+		use a python script to migrate all data, but disidentify.
+
 *updates the schema:
 	Because the schema for this app is complex we have opted to not use migrations and instead check in a .mwb file into the repository allowing for visual representation.  To make changes to the schema:
 
