updated README now includes instructions to use rake db:seed to get production database database started

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ EDS Dashboard***
 	install dependencies:
 		bundle install
 
-* Database creation
+* Database migration
 
 	Initial migration
 	In windows: 
@@ -18,18 +18,18 @@ EDS Dashboard***
 
 	In Linux (local machine): 
 
-		SCHEMA:
-			make sure the model.wb file is up to date on localhost. Synchronize with edsdata.
 		DATA: 
 		1) create movedb from dump.sql
 		2) using python script, connect to edsdata and migrate data to database called eds.
-		3) copy same data to eds_development but disidentify
 
-*updates the schema:
-	Because the schema for this app is complex we have opted to not use migrations and instead check in a .mwb file into the repository allowing for visual representation.
+*updates to the schema:
+	- We are using migrations to keep properly version the schema. Run `rake db:migrate` to get the schema in the most current version. When pushing new migrations be sure to also push the most up to data schema.rb.
+
+
 
 * Database initialization
-
+	- To build the schema from scratch `rake db:schema:load` might not run properly or at all. You might need to drop the database and run all migrations.
+	- run `rake db:seed` to load constant data from fixtures. This will load `banner_terms` , `exit_codes`, `programs` and `roles`
 
 * Testing
 
